# My_libC

./: .gitignore  .v1.old.tar  CMakeLists.txt  Makefile  README.md  get_lib.sh  test.c
ctype/: ctype.h  isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
includes/: my.h  printf.h
libs_srcs/my/: Makefile  my_memcpy.c  my_realloc.c  my_str_to_wordtab.c  my_strcat.c  my_strchr.c  my_strcmp.c  my_strndup.c
libs_srcs/printf/: Makefile  arg_boolean.c  arg_char.c  arg_int.c  arg_octal.c  arg_perc.c  arg_pointer.c  arg_string.c  arg_string_octal.c  arg_unsigned_bin.c  arg_unsigned_hexa.c  arg_unsigned_hexa_upp.c  arg_unsigned_int.c  base_printf.c  my_printf.c
string/: stpcpy.c  strcasecmp.c  strchrnul.c  strdup.c  string.h  strncasecmp.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strsep.c  strspn.c  strtok.c
strings/: index.c  rindex.c  stpcpy.c  stpncpy.c  strcasecmp.c  strcat.c  strchr.c  strchrnul.c  strcmp.c  strcpy.c  strcspn.c  strdup.c  strfry.c  strings.h  strlen.c  strncasecmp.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strsep.c  strspn.c  strstr.c  strtok.c  strtok_r.c  swap.c
